# pm-trainer

./: .gitignore  MANIFEST.in  README.md  ant_sensors.py  bike_sim.py  bug_indicator.py  pm_trainer.py  profile_plotter.py  requirements.txt  settings.py  settings_dialog.py  setup.cfg  setup.py  tcx_file.py  tox.ini  workout_profile.py  zwerft.py
assets/: icons.py
pmtrainer/: ant_sensors.py  bike_sim.py  bug_indicator.py  pm_trainer.py  profile_plotter.py  settings.py  settings_dialog.py  strava_api.py  tcx_file.py  workout_profile.py
pmtrainer/assets/: strava_auth_confirm_page.py
pmtrainer/tests/: test_ant_sensors.py  test_bike_sim.py  test_bug_indicator.py  test_profile_plotter.py  test_settings.py  test_settings_dialog.py  test_strava_api.py  test_tcx_file.py  test_workout_profile.py
pmtrainer/tests/fixtures/sample_settings/: default_settings.sampleini
pmtrainer/tests/fixtures/sample_tcx_files/: 20201217_182711_megan.tcx  20210325_160413.tcx  basic_file_structure_test.tcx
python-ant/: README.md  setup.py
python-ant/demos/ant.core/: 01-reset.py  02-capabilities-USB.py  04-processevents.py  10-weight.py  11-heartrate.py  12-power.py  config.py
python-ant/src/ant/: __init__.py
sample_files/: Jon_s_Mix.tcx  Tried_out_the_workout_course_.tcx
src/: pm_trainer.py  profile_plotter.py
src/pm_trainer.egg-info/: PKG-INFO  SOURCES.txt
src/pmtrainer/: ant_sensors.py  bike_sim.py  bug_indicator.py  pm_trainer.py  profile_plotter.py  settings.py  settings_dialog.py  strava_api.py
src/pmtrainer/assets/: strava_auth_confirm_page.py
src/pmtrainer/pm_trainer.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_bike_sim.py  test_bug_indicator.py  test_profile_plotter.py  test_settings.py  test_settings_dialog.py  test_strava_api.py  test_tcx_file.py  test_workout_profile.py
workouts/: short_stack.yaml  sweet_spot.yaml  sweet_spot_short.yaml
zwerft.app/Contents/: Info.plist
zwerft.app/Contents/MacOS/: python
zwerft.app/Contents/Resources/: __boot__.py
(+32 files in other folders)
