[metadata]
name = pm-trainer
version = 1.1.1
author = Robert Ussery
author_email = robert@ussery.info
description = A simple bike trainer workout GUI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/russery/pm-trainer
project_urls =
    Bug Tracker = https://github.com/russery/pm-trainer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
	ant
    numpy
	requests
	PySimpleGUI
	PyYAML
    # Use this fork of ant to resolve issue with pyserial version:
    ant @ git+https://github.com/russery/python-ant#egg=ant

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pmtrainer = pm_trainer:main