[metadata]
name = pm-trainer
version = 1.0.1
author = Robert Ussery
author_email = robert@ussery.info
description = A simple bike trainer workout GUI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/russery/pm-trainer
project_urls =
    Bug Tracker = https://github.com/russery/pm-trainer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy
	requests
	PySimpleGUI
	PyYAML
    # Use this fork of ant to resolve issue with pyserial version:
    ant >= 0.2.0
dependency_links =
    https://github.com/russery/python-ant/releases/download/0.2.0/ant-0.2.0-py3.8.egg#egg=ant-0.2.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pmtrainer = pmtrainer.pm_trainer:main
